--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -24,5 +24,41 @@ body {
     width: 100%;
 }
 
+.add-task-form {
+    display: flex;
+    background-color: #F4F3FB;
+    height: 100%;
+    padding: 32px;
+    margin-top: 32px;
+    border-radius: 16px;
+    gap: 48px;
+}
+
+.add-task-form--left,
+.add-task-form--right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50%;
+}
+
+.form-control {
+    resize: none;
+}
+
+.input-field {
+    height: 56px;
+}
+
+.textarea-input {
+    height: 128px;
+}
+
+.form-controls {
+    display: flex;
+    justify-content: flex-end;
+    gap: 16px;
+}
+
 
 /* Right container End */
