--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,7 +5,7 @@
     align-items: center;
     width: 200px;
     height: 100%;
-    background-color: #1E3190
+    background-color: #1E3190;
 }
 
 .sidebar-header {
