--- a/styles/login.css
+++ b/styles/login.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #536ffb;
+    background-color: #e6eaff;
 }
 
 .login-section {
@@ -37,13 +37,13 @@ body {
     position: absolute;
     right: 16px;
     bottom: 16px;
-    color: white;
+    color: #1E3190;
     text-decoration: none;
     border-bottom: 2px solid transparent;
     transition: all 225ms ease-in-out;
 }
 
 .contact-link:hover {
-    color: white;
-    border-bottom: 2px solid white;
+    color: #1E3190;
+    border-bottom: 2px solid #1E3190;
 }
