--- a/styles/login.css
+++ b/styles/login.css
@@ -10,9 +10,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 16px;
+    padding: 32px;
     border-radius: 16px;
-    gap: 16px;
+    gap: 32px;
     background-color: #1E3190;
     color: white;
 }
@@ -31,6 +31,14 @@ body {
     display: flex;
     align-items: center;
     margin-right: 8px;
+}
+
+.login-messages {
+    margin-top: 32px;
+}
+
+.alert {
+    text-align: center;
 }
 
 .contact-link {
