--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -13,6 +13,21 @@ body {
     padding-bottom: 96px;
 }
 
+.d-none {
+    display: none;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #ee6002;
+    border-color: #ee6002;
+}
+
+.btn-primary:hover {
+    background-color: #c06b33;
+    border-color: #c06b33;
+}
+
 
 /* Right container Begin */
 
@@ -75,12 +90,13 @@ header h1 {
 }
 
 .submit-btn {
-    background-color: #1E3190;
-    border-color: #1E3190;
+    background-color: #75e900;
+    border-color: #75e900;
 }
 
 .submit-btn:hover {
-    background-color: #465396;
+    background-color: #41c300;
+    border-color: #41c300;
 }
 
 .input-field {
