--- a/styles/login.css
+++ b/styles/login.css
@@ -27,6 +27,22 @@ body {
     width: 25vw;
 }
 
+.form-label {
+    color: white;
+    font-weight: 100;
+    font-size: unset;
+}
+
+.form-control:focus {
+    border-color: rgb(210, 194, 253);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(210, 194, 253, 0.8);
+}
+
+.form-check-input:focus {
+    border-color: rgb(210, 194, 253);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(210, 194, 253, 0.8);
+}
+
 .checkbox-input {
     display: flex;
     align-items: center;
@@ -47,11 +63,12 @@ body {
     bottom: 16px;
     color: #1E3190;
     text-decoration: none;
-    border-bottom: 2px solid transparent;
-    transition: all 225ms ease-in-out;
 }
 
-.contact-link:hover {
-    color: #1E3190;
-    border-bottom: 2px solid #1E3190;
+.contact-link img {
+    width: 48px;
+}
+
+.contact-link img:hover {
+    filter: invert(57%) sepia(89%) saturate(4716%) hue-rotate(2deg) brightness(96%) contrast(99%);
 }
