--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -39,7 +39,7 @@ aside {
 }
 
 .selected-nav-element {
-    border-left: 4px solid white !important;
+    border-left: 4px solid #90ee02 !important;
     background-color: rgba(255, 255, 255, 0.2);
 }
 
