assign todos and add breakpoints

--- a/styles/backlog.css
+++ b/styles/backlog.css
@@ -29,7 +29,7 @@ a {
     background-color: #e8e5f1;
 }
 
-.backlog-item > * {
+.backlog-item>* {
     margin: 0 20px;
 }
 
@@ -112,3 +112,33 @@ a {
 .edit-dialog .add-task-form {
     margin-top: 0;
 }
+
+
+/* Extra extra small devices (phones, 360px and down) */
+
+@media only screen and (max-width: 360px) {}
+
+
+/* Extra small devices (phones, 360px and up) */
+
+@media only screen and (min-width: 360px) {}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+
+@media only screen and (min-width: 600px) {}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) {}
+
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media only screen and (min-width: 992px) {}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
+@media only screen and (min-width: 1200px) {}
