--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -53,18 +53,15 @@ aside {
     height: 90px;
 }
 
-.user-profile-picture {
-    width: 100%;
-    height: 100px;
+.user-profile-btn {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
-.user-profile-picture img {
+.user-profile-btn img {
     width: 64px;
-    height: 64px;
-    object-fit: cover;
-    border: 3px white solid;
-    border-radius: 50%;
 }
