--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,5 +1,6 @@
 aside {
     position: fixed;
+    z-index: 1;
 }
 
 .sidebar-container {
@@ -75,6 +76,7 @@ aside {
     position: absolute;
     top: 16px;
     left: 16px;
+    z-index: 1;
 }
 
 .mobile-menu-btn img {
