--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -96,3 +96,7 @@ aside {
     transform: translateX(0%);
     transition: all 225ms ease-in-out;
 }
+
+.scrolling-not-allowed {
+    overflow: hidden;
+}
