--- a/styles/board.css
+++ b/styles/board.css
@@ -1,12 +1,27 @@
-.border-container {
-    width: 100%;
+.right-container {
     display: flex;
+    flex-direction: column;
+    position: relative;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 100%;
+    height: 100%;
+    margin-left: 200px;
+}
+
+.border-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 16px;
+    width: 100%;
+    height: 100%;
 }
 
 .border-col {
-    width: 25%;
-    margin: 0 15px;
-    height: 80vh;
+    flex: 1;
+    min-width: 200px;
+    height: 100%;
 }
 
 .border-title {
@@ -20,7 +35,7 @@
 
 .border-content {
     background-color: #F4F3FB;
-    height: 100%;
+    height: 93%;
     padding-top: 5px;
 }
 
@@ -28,7 +43,6 @@
 /* Drag and Drop */
 
 .todo {
-    width: 95%;
     border-style: solid;
     border-width: 4px;
     margin: 15px auto;
@@ -141,7 +155,7 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 
 @media only screen and (min-width: 1200px) {
-    .sidebar-container {
+    /* .sidebar-container {
         width: 300px;
     }
     .logo-img {
@@ -155,5 +169,5 @@
     }
     .user-profile-btn img {
         width: 96px;
-    }
+    } */
 }
