--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,26 @@
+.right-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 100%;
+    margin-left: 200px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+}
+
+header h1 {
+    font-weight: 600;
+}
+
+.title-description {
+    color: #1E3190;
+}
+
 .imprint {
     padding-bottom: 96px;
 }
@@ -9,17 +32,83 @@
 
 /* Extra extra small devices (phones, 360px and down) */
 
-@media only screen and (max-width: 360px) {}
+@media only screen and (max-width: 360px) {
+    .border-spacing {
+        padding-top: 64px;
+        padding-bottom: 54px;
+    }
+    header {
+        align-items: center;
+        text-align: center;
+    }
+    .mobile-menu-hidden {
+        transform: translateX(0%);
+        transition: all 225ms ease-in-out;
+    }
+    .mobile-menu-visible {
+        transform: translateX(-100%);
+        transition: all 225ms ease-in-out;
+    }
+    .sidebar-container {
+        width: 100%;
+    }
+    .right-container {
+        margin-left: 0;
+    }
+}
 
 
 /* Extra small devices (phones, 360px and up) */
 
-@media only screen and (min-width: 360px) {}
+@media only screen and (min-width: 360px) {
+    .border-spacing {
+        padding-top: 64px;
+        padding-bottom: 54px;
+    }
+    header {
+        align-items: center;
+        text-align: center;
+    }
+    .mobile-menu-hidden {
+        transform: translateX(0%);
+        transition: all 225ms ease-in-out;
+    }
+    .mobile-menu-visible {
+        transform: translateX(-100%);
+        transition: all 225ms ease-in-out;
+    }
+    .right-container {
+        margin-left: 0;
+    }
+}
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+    .border-spacing {
+        padding-top: 48px;
+        padding-bottom: 96px;
+    }
+    header {
+        align-items: unset;
+        text-align: unset;
+    }
+    .mobile-only {
+        display: none;
+    }
+    .mobile-menu-hidden {
+        transform: translateX(-100%);
+        transition: all 225ms ease-in-out;
+    }
+    .mobile-menu-visible {
+        transform: translateX(0%);
+        transition: all 225ms ease-in-out;
+    }
+    .right-container {
+        margin-left: 200px;
+    }
+}
 
 
 /* Medium devices (landscape tablets, 768px and up) */
