--- a/styles/login.css
+++ b/styles/login.css
@@ -77,27 +77,62 @@ body {
 
 /* Extra extra small devices (phones, 360px and down) */
 
-@media only screen and (max-width: 360px) {}
+@media only screen and (max-width: 360px) {
+    .login-section {
+        justify-content: center;
+        width: 90%;
+        height: 65%;
+    }
+    .login-form {
+        width: 100%;
+    }
+}
 
 
 /* Extra small devices (phones, 360px and up) */
 
-@media only screen and (min-width: 360px) {}
+@media only screen and (min-width: 360px) {
+    .login-section {
+        justify-content: center;
+        width: 90%;
+        height: 65%;
+    }
+    .login-form {
+        width: 100%;
+    }
+}
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
-@media only screen and (min-width: 600px) {}
+@media only screen and (min-width: 600px) {
+    .login-section {
+        justify-content: center;
+        width: unset;
+        height: unset;
+    }
+    .login-form {
+        width: 50vw;
+    }
+}
 
 
 /* Medium devices (landscape tablets, 768px and up) */
 
-@media only screen and (min-width: 768px) {}
+@media only screen and (min-width: 768px) {
+    .login-form {
+        width: 35vw;
+    }
+}
 
 
 /* Large devices (laptops/desktops, 992px and up) */
 
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+    .login-form {
+        width: 25vw;
+    }
+}
 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
