some refactoring and finishing board

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -46,3 +46,203 @@ body {
     font-size: 20px;
     color: #1E3190;
 }
+
+.dialog-bg {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dialog {
+    background-color: white;
+    border-radius: 8px;
+}
+
+.dialog-task {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: relative;
+    gap: 16px;
+    padding: 16px;
+    /* border-style: solid;
+    border-width: 8px; */
+    border-radius: 8px;
+    background-color: #f4f3fb;
+}
+
+.task-header {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.task-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-task-footer {
+    padding-right: 24px;
+}
+
+.task-description {
+    margin-top: 16px;
+}
+
+.description {
+    word-break: break-word;
+    overflow: hidden;
+    white-space: pre-wrap;
+    margin-bottom: 36px;
+}
+
+.selection-dialog {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 36px;
+}
+
+.task-title {
+    overflow: hidden;
+    white-space: pre-wrap;
+    text-overflow: ellipsis;
+}
+
+.task-settings {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 16px;
+}
+
+.fa-xmark {
+    position: absolute;
+    right: 14px;
+    top: 10px;
+    font-size: 28px !important;
+    cursor: pointer;
+}
+
+.fa-solid {
+    position: absolute;
+    cursor: pointer;
+    font-size: 22px;
+    color: #1E3190;
+}
+
+.fa-solid:hover {
+    color: #ee6002;
+}
+
+.fa-file-circle-plus {
+    right: 88px;
+    bottom: 20px;
+}
+
+.fa-file-circle-minus {
+    right: 88px;
+    bottom: 20px;
+}
+
+.fa-pen-to-square {
+    right: 54px;
+    bottom: 20px;
+}
+
+.fa-trash-can {
+    right: 20px;
+    bottom: 20px;
+}
+
+.assigned-to {
+    display: flex;
+}
+
+.person {
+    display: flex;
+}
+
+.person-name {
+    display: flex;
+    flex-direction: column;
+}
+
+.person-name span {
+    width: 192px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.profile-picture {
+    height: 48px;
+    width: 48px;
+    object-fit: cover;
+    margin-right: 8px;
+}
+
+.edit-dialog {
+    position: relative;
+}
+
+.edit-dialog .add-task-form {
+    margin-top: 0;
+}
+
+/* Extra extra small devices (phones, 360px and down) */
+
+@media only screen and (max-width: 360px) {
+    .dialog-task {
+        width: 90vw;
+    }
+}
+
+
+/* Extra small devices (phones, 360px and up) */
+
+@media only screen and (min-width: 360px) {
+    .dialog-task {
+        width: 90vw;
+    }
+}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+
+@media only screen and (min-width: 600px) {
+
+}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) {
+    .dialog-task {
+        width: 65vw;
+    }
+}
+
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media only screen and (min-width: 992px) {
+    .dialog-task {
+        width: 550px;
+    }
+}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
+@media only screen and (min-width: 1200px) {}
