--- a/styles/board.css
+++ b/styles/board.css
@@ -35,8 +35,10 @@
 
 .border-content {
     background-color: #F4F3FB;
-    height: 93%;
-    padding-top: 5px;
+    /* height: 93%; */
+    min-height: 200px;
+    padding: 8px;
+    border-radius: 8px;
 }
 
 .drag-area-highlight {
@@ -47,14 +49,13 @@
 /* Drag and Drop */
 
 .board-item {
-    border-style: solid;
-    border-width: 2px;
     margin: 15px auto;
     border-radius: 8px;
     padding: 4px 8px;
     background-color: white;
     text-align: center;
-    cursor: pointer;
+    cursor: move;
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .drag-area {
